--- a/src/app/pages/users/components/users-list/users-list.component.html
+++ b/src/app/pages/users/components/users-list/users-list.component.html
@@ -24,7 +24,8 @@
             </div>
             <div class="col-sm-2">
                 <label for="role" class="col-form-label">&nbsp;</label>
-                <button type="button" class="create-user btn btn-primary float-right" [routerLink]="['/users/create']"><i class="fas fa-user-plus"></i>Create new user</button></div>
+                <button type="button" class="create-user btn btn-primary float-right" [routerLink]="['/users/create']"><i class="fas fa-user-plus"></i>Create new user</button>
+            </div>
         </div>
     </form>
 </div>
