--- a/src/app/pages/tenders/components/tenders-list/tenders-list.component.html
+++ b/src/app/pages/tenders/components/tenders-list/tenders-list.component.html
@@ -1,5 +1,15 @@
 <div class="card-header">
     <h3>Tenders list</h3>
+
+    <!-- *********************************** DO NOT REMOVE ************************************** -->
+    <!-- <div class="row">
+
+        <div class="col-sm-2">
+            <label for="role" class="col-form-label">&nbsp;</label>
+            <button type="button" class="create-user btn btn-primary float-right" [routerLink]="['/tenders/create']"><i class="fas fa-user-plus"></i>Create new tender</button>
+        </div>
+
+    </div> -->
 </div>
 <ng2-smart-table class="table table-striped" [settings]="settings" [source]="source"></ng2-smart-table>
 <pagination *ngIf="totalItems > 20" class="pagination-sm" (ngModel)="page" [totalItems]="totalItems" [itemsPerPage]="itemsPerPage" [maxSize]="maxSize" [boundaryLinks]="true" [rotate]="false" (pageChanged)="pageChanged($event)" (numPages)="numPages = $event">
