--- a/src/app/pages/tenders/components/tender-edit/tender-edit.component.html
+++ b/src/app/pages/tenders/components/tender-edit/tender-edit.component.html
@@ -12,7 +12,8 @@
                     <label [for]="key" class="col-form-label">
                         {{replaceUnderscore(key)}}
                         
-                        <span *ngIf="key === 'codes'" class="code-finder set-cursor"><a>Code Finder</a></span>
+                        <!-- ******************** DO NOT REMOVE ******************* -->
+                        <!-- <span *ngIf="key === 'codes'" class="code-finder set-cursor"><a>Code Finder</a></span> -->
                         
                     </label>
 
