--- a/src/app/pages/orbidal-group/components/groups-list/groups-list.component.html
+++ b/src/app/pages/orbidal-group/components/groups-list/groups-list.component.html
@@ -1,9 +1,18 @@
 <div class="card-header">
-    <h3>Orbidal Group List</h3>
+    <!-- <h3>Orbidal Group List</h3>
 
     <div class="row">
         <div class="col-sm-2">
             <label for="role" class="col-form-label">&nbsp;</label>
+            <button type="button" class="create-user btn btn-primary float-right" (click)="openAddEditModal(createORBGroup, undefined)"><i class="fas fa-user-plus"></i>Create new Group</button>
+        </div>
+    </div> -->
+
+    <div class="row">
+        <div class="col-sm-6">
+            <h3>Orbidal Group List</h3>
+        </div>
+        <div class="col-sm-6">
             <button type="button" class="create-user btn btn-primary float-right" (click)="openAddEditModal(createORBGroup, undefined)"><i class="fas fa-user-plus"></i>Create new Group</button>
         </div>
     </div>
@@ -26,8 +35,8 @@
                 <td>{{item?.name }}</td>
                 <td>{{item?.company_count}}</td>
                 <td>
-                    <span class="iconn"><i class="fas fa-building set-cursor" title="Add New Company(s)" (click)="openConfirmDeleteORBGroupModal(includeCompanies, item)"></i></span>
-                    <span class="iconn"><i class="fas fa-archive set-cursor" title="Delete Group" (click)="openConfirmDeleteORBGroupModal(deleteORBGroupModal, item)"></i></span>
+                    <span class="iconn"><i class="fas fa-building set-cursor" title="Add New Company(s)" (click)="openConfirmDeleteORBGroupModal(includeCompanies, item, 'get-detail')"></i></span>
+                    <span class="iconn"><i class="fas fa-trash-alt set-cursor" title="Delete Group" (click)="openConfirmDeleteORBGroupModal(deleteORBGroupModal, item, undefined)"></i></span>
                 </td>
             </tr>
         </tbody>
@@ -47,7 +56,7 @@
     <div class="modal-body">
         <div class="used-selectbr repo-used-selectbr">
             <form [formGroup]="ORBGroupForm">
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col-xs-12 col-sm-6">
 
                         <label class="col-form-label">Group Name</label>
@@ -56,7 +65,18 @@
                             <input type="text" class="form-control" placeholder="" formControlName="name">
                         </div>
                     </div>
+                </div> -->
+
+
+                <div class="row">
+                    <div class="col-sm-4">
+                        <label class="col-form-label">Group Name</label>
+                    </div>
+                    <div class="col-sm-8">
+                        <input class="form-control" formControlName="name" placeholder="" type="text" ng-reflect-name="name">
+                    </div>
                 </div>
+
             </form>
         </div>
         <div class="button-holder">
@@ -89,7 +109,7 @@
 <!-- Modal for Includes Company(s) -->
 <ng-template #includeCompanies>
     <div class="modal-header">
-        <h4 class="modal-title pull-left include-company-header">INCLUDE COMPANY(S) FOR <span class="include-company-header-span"> {{editGroup?.name}} </span> GROUP </h4>
+        <h4 class="modal-title pull-left include-company-header">ADD COMPANY(S) TO <span class="include-company-header-span"> {{editGroup?.name}} </span> GROUP </h4>
         <button type="button" class="close pull-right" aria-label="Close" (click)="createORBGroupModalRef.hide()">
         <span aria-hidden="true">&times;</span>
       </button>
