--- a/src/app/pages/tenders/components/tender-edit/tender-edit.component.html
+++ b/src/app/pages/tenders/components/tender-edit/tender-edit.component.html
@@ -13,7 +13,7 @@
                         {{replaceUnderscore(key)}}
                         
                         <!-- ******************** DO NOT REMOVE ******************* -->
-                        <!-- <span *ngIf="key === 'codes'" class="code-finder set-cursor"><a>Code Finder</a></span> -->
+                        <!-- <span *ngIf="key === 'codes'" class="code-finder set-cursor" (click)="showCodeFinderPopup=true; callPopulate(codetype); addClassToBody()"><a>Code Finder</a></span> -->
                         
                     </label>
 
