--- a/src/app/pages/companies/components/companies-statistics/companies-statistics.component.html
+++ b/src/app/pages/companies/components/companies-statistics/companies-statistics.component.html
@@ -17,7 +17,7 @@
 
                 <div class="col-md-5">
                     <!-- <label for="days" class="col-form-label">Days:</label> -->
-                    <select class="form-control" id="days" formControlName="days">
+                    <select class="form-control" id="days" formControlName="days" (change)="page=1">
                   <option value="all">All Days</option >
                   <option value="30">Past 30 days</option >
                   <option value="60"> Past 60 days</option >
