--- a/src/app/pages/bid-academy/components/story-boards-list/story-boards-list.component.html
+++ b/src/app/pages/bid-academy/components/story-boards-list/story-boards-list.component.html
@@ -42,7 +42,7 @@
     </pagination-controls>
 </div> -->
 
-<!-- Modal for Archive user -->
+<!-- Modal for Delete Board -->
 <ng-template #deleteBoardModal>
 
     <div class="modal-header">
