--- a/src/app/pages/bid-academy/components/story-board/story-board.component.html
+++ b/src/app/pages/bid-academy/components/story-board/story-board.component.html
@@ -1,28 +1,44 @@
 <div class="card card-accent-primary">
     <div class="card-header">
 
-        <h3>Create New Story Board</h3>
+        <h3>{{!boardId ? 'Create New' : 'Edit'}} Story Board</h3>
 
     </div>
     <div class="card-body">
         <form [formGroup]="storyBoardForm" novalidate>
 
             <div class="row">
+
+                <div class="col-xs-12 col-sm-6">
+                    <label for="story_id" class="col-form-label">Select Group: </label>
+                    <div class="">
+
+                        <select formControlName="story_id" id="story_id" class="form-control">
+                            <option *ngFor="let group of groups" [value]="group.id">{{group.name}}</option>
+                        </select>
+
+                    </div>
+                </div>
+
                 <div class="col-xs-12 col-sm-6">
                     <label for="title" class="col-form-label">Title: </label>
                     <div class="">
                         <input type="text" formControlName="title" class="form-control" id="title">
                     </div>
                 </div>
+
+            </div>
+
+            <div class="row">
+
                 <div class="col-xs-12 col-sm-6">
                     <label for="description" class="col-form-label">Description: </label>
                     <div class="">
                         <textarea rows="6" formControlName="description" class="form-control" id="description" placeholder=""></textarea>
                     </div>
                 </div>
-            </div>
 
-            <div class="row">
+
                 <div class="col-xs-12 col-sm-6">
                     <label for="tags" class="col-form-label">Select Tags: </label>
                     <div class="">
@@ -34,6 +50,7 @@
                         </ng-multiselect-dropdown>
                     </div>
                 </div>
+
             </div>
 
             <div class="form-group row margin-t20">
