--- a/src/app/pages/bid-academy/components/story-board/story-board.component.html
+++ b/src/app/pages/bid-academy/components/story-board/story-board.component.html
@@ -56,7 +56,7 @@
             <div class="form-group row margin-t20">
                 <div class="col-12">
                     <button type="submit" [disabled]="storyBoardForm.invalid" class="btn btn-primary" (click)="submitForm()">Submit</button>
-                    <a class="btn btn-secondary" routerLink="/bid-academy/story-boards-list">Cancel</a>
+                    <a class="btn btn-secondary set-margin-left10" routerLink="/bid-academy/story-boards-list">Cancel</a>
                 </div>
                 <!-- <div class="col-12" *ngIf="created">
                   <a routerLink="/users/list" class="btn btn-secondary">Back</a>
