--- a/src/app/pages/bid-academy/components/group/group-list/group-list.component.html
+++ b/src/app/pages/bid-academy/components/group/group-list/group-list.component.html
@@ -5,8 +5,13 @@
     <div class="row">
         <div class="col-sm-12">
             <label for="role" class="col-form-label">&nbsp;</label>
-            <button type="button" class="create-user btn btn-primary float-right" (click)="openModal(addEditGroupModal, undefined)"><i class="fas fa-plus-square"></i>Create new Story Group</button>
+            <button type="button" class="create-user btn btn-primary float-right set-margin-left10" (click)="openModal(addEditGroupModal, undefined)"><i class="fas fa-plus-square"></i>Create new Story Group</button>
+            <button type="button" class="create-user btn btn-primary float-right" (click)="openModal(includeUsers, undefined)"><i class="fas fa-plus-square"></i>Include Users</button>
         </div>
+
+        <!-- <div class="col-sm-6">
+            <label for="role" class="col-form-label">&nbsp;</label>
+        </div> -->
     </div>
 </div>
 
@@ -94,5 +99,38 @@
             <button class="btn" (click)="bsModalRef.hide()">No</button>
             <button class="btn btn-yes-margin33" (click)="deleteGroupEvent()">Yes</button>
         </div>
+    </div>
+</ng-template>
+
+<!-- Modal for Exclude Users -->
+<ng-template #includeUsers>
+    <div class="modal-header">
+        <h4 class="modal-title pull-left">INCLUDE USERS FOR STORY GROUP(S)</h4>
+        <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+        <form [formGroup]="includeUsersForm" novalidate>
+
+            <div class="used-selectbr repo-used-selectbr">
+                <p>Select Users To Include:</p>
+
+                <ng-multiselect-dropdown [placeholder]="'Select Users'" [data]="groups" formControlName="story_ids" [settings]="dropdownSettings" (onSelect)="onItemSelect($event)" (onSelectAll)="onSelectAll($event)">
+                </ng-multiselect-dropdown>
+            </div>
+
+            <div class="used-selectbr repo-used-selectbr">
+                <p>Select Users To Include:</p>
+
+                <ng-multiselect-dropdown [placeholder]="'Select Users'" [data]="usersList" formControlName="user_ids" [settings]="dropdownSettings" (onSelect)="onItemSelect($event)" (onSelectAll)="onSelectAll($event)">
+                </ng-multiselect-dropdown>
+            </div>
+
+            <div class="button-holder">
+                <button class="upload_btn" [ngClass]="{'disabled': includeUsersForm.invalid}" [disabled]="includeUsersForm.invalid" (click)="includeUsersEvent()">Save</button>
+            </div>
+        </form>
+
     </div>
 </ng-template>
