--- a/src/app/pages/bid-academy/components/story-boards-list/story-boards-list.component.html
+++ b/src/app/pages/bid-academy/components/story-boards-list/story-boards-list.component.html
@@ -26,7 +26,7 @@
                 </td>
                 <td>{{item?.title }}</td>
                 <td>{{item?.description}}</td>
-                <td>{{item?.tags}}</td>
+                <td>{{item?.tags.join(', ')}}</td>
                 <td>
                     <span class="iconn"><i class="fas fa-archive set-cursor" (click)="openModal(deleteBoardModal, item)" title="Delete Story Board"></i></span>
                 </td>
