--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,6 +33,10 @@
     cursor: pointer;
 }
 
+.set-margin-left10 {
+    margin-left: 10px;
+}
+
 .email-set {
     font-size: 12px;
     color: blue;
